--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,9 @@
                             <h4 class="features__title">Deliciousness</h4>
                             <div class="icon"></div>
                         </header>
+
+                        <div class="features__header-icon features__header-icon-left"></div>
+                        <div class="features__header-icon features__header-icon-right"></div>
                         <p class="features__content">
                             Quisque posuere ligula sit amet massa accumsan id rutrum lectus suscipit. Donec in neque mauris, non pulvinar quam. Donec felis ante, placerat eu feugiat non, sagittis eu magna.
                         </p>
@@ -28,14 +31,18 @@
                     <div class="features__item">
                         <header class="features__header">
                             <h4 class="features__title">Get it Fresh</h4>
-                            <div class="icon"></div>
+                            <div class="icon two"></div>
                         </header>
+
+                        <div class="features__header-icon features__header-icon-left"></div>
+                        <div class="features__header-icon features__header-icon-right"></div>
+
                         <p class="features__content">
                             Vivamus ac nisi eros, eget semper purus. Sed ullamcorper, augue quis feugiat tincidunt, erat felis consectetur nibh, a hendrerit eros felis eu dui.
                         </p>
                         <footer class="features__footer">
                             <p class="features__content">
-                                Vivamus ac nisi eros, eget semper purus. Sed ullamcorper, augue quis feugiat tincidunt, erat felis consectetur nibh, a hendrerit eros felis eu dui.
+                                Order fresh baked goods now
                             </p>
                         </footer>
                     </div>
@@ -45,8 +52,12 @@
                     <div class="features__item">
                         <header class="features__header">
                             <h4 class="features__title">Flavorific</h4>
-                            <div class="icon"></div>
+                            <div class="icon three"></div>
                         </header>
+
+                        <div class="features__header-icon features__header-icon-left"></div>
+                        <div class="features__header-icon features__header-icon-right"></div>
+
                         <p class="features__content">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer odio nisl, vulputate vel blandit nec, congue a sem. Aenean dapibus sagittis lectus id vehicula. Quist magnust nec lectus.
                         </p>
